--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -80,7 +80,7 @@
     font-size: 2rem;
 }
 
-.figures >div > span:nth-of-type(1) {
+.figures >div > span:nth-of-type(2) {
     color: var(--gray);
     text-transform: none;
 }
@@ -178,4 +178,87 @@
 .calories > div > :nth-child(2) {
     color: white;
     font-size: 1.5rem;
+}
+
+.hero-blur {
+    width: 28rem;
+    height: 30rem;
+    left: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .hero {
+        flex-direction: column;
+    }
+
+    .hero-blur {
+        width: 14rem;
+    }
+
+    .the-best-ad {
+        margin-top: 0;
+        font-size: small;
+        align-self: center;
+        transform: scale(0.8);
+    }
+
+    .hero-text {
+        font-size: xx-large;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero-text > div:nth-child(3) {
+        font-size: small;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-align: center;
+    }
+
+    .hero-buttons {
+        justify-content: center;
+    }
+
+    .figures > div >span:nth-of-type(1) {
+        font-size: large;
+    }
+
+    .figures > div > span:nth-of-type(2) {
+        font-size: small;
+    }
+
+    .right-h {
+        position: relative;
+        background: none;
+    }
+
+    .heart-rate {
+        left: 1rem;
+        top: 2rem;
+    }
+
+    .calories{
+        position: relative;
+        top: 5rem;
+        left: 2rem;
+    }
+
+    .calories > div >:nth-child(2) {
+        color: white;
+        font-size: 1rem;
+    }
+
+    .hero-image {
+        position: relative;
+        width: 15rem;
+        left: 4rem;
+        top: 4rem;
+        align-self: center;
+    }
+
+    .hero-image-back {
+        width: 15rem;
+        left: 2rem;
+        top: 0rem;
+    }
 }
