--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -6,6 +6,22 @@
     gap: 4rem;
     position: relative;
 }
+
+.plans-blur1{
+    width: 32rem;
+    height: 23rem;
+    top: 6rem;
+    left: 0rem;
+}
+
+.plans-blur2 {
+    width: 32rem;
+    height: 23rem;
+    top: 10rem;
+    right: 0rem;
+}
+
+
 .plans {
     display: flex;
     align-items: center;
@@ -70,4 +86,14 @@
 
 .plans >:nth-child(2)>button {
     color: orange;
+}
+
+@media screen and (max-width: 768px) {
+    .plans {
+        flex-direction: column;
+    }
+
+    .plans >:nth-child(2) {
+        transform: none;
+    }
 }
